--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
-      "@/*": ["src/*"],
+      "@/*": ["./src/*"],
       "@assets/*": ["assets/*"]
     }
   },
