--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.4",
     "@react-navigation/material-top-tabs": "^7.1.1",
     "@react-navigation/native": "^7.0.14",
+    "@supabase/supabase-js": "^2.49.1",
     "@types/react": "~18.3.12",
     "dayjs": "^1.11.13",
     "expo": "~52.0.36",
